--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -8,7 +8,8 @@ parserOptions:
 rules:
   max-len:
     - error
-    - code: 100
+    - code: 120
   require-jsdoc:
     - off
   linebreak-style: off
+  no-trailing-spaces: off
