Temporary solution for the 4th task. Testing was not possible due to Windows restrictions. ESLint. The rule for curly braces has been added.

--- a/.eslintrc.yml
+++ b/.eslintrc.yml
@@ -14,3 +14,8 @@ rules:
   linebreak-style: off
   no-trailing-spaces: off
   arrow-parens: off
+  object-curly-spacing:
+    - warn
+    - always
+    - objectsInObjects: false
+      arraysInObjects: false
